objects/Quote_Response_Association__c.object
<CustomObject>
    <fields>
        <fullName>AHP_fee_sold__c</fullName>
        <label>AHP Fee [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASL_Fee_ByTier_final_Single__c</fullName>
        <label>ASL Fee  - Single [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASL_Fee_ByTier_initial_Single__c</fullName>
        <label>ASL Fee  - Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASL_Fee_ByTier_sold_single__c</fullName>
        <label>ASL Fee  - Single [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASL_Fee_Type__c</fullName>
        <label>ASL Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>PEPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Fee_Types__c</fullName>
        <label>Access Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Built_into_Admin</fullName>
                </value>
                <value>
                    <fullName>Pct_of_ADP</fullName>
                </value>
                <value>
                    <fullName>Per_Capita</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Fee_ByTier_TXT_Comp_sold__c</fullName>
        <label>Admin Fee  - Comp [sold]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Fee_ByTier_TX_Comp_Initial__c</fullName>
        <label>Admin Fee - Comp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Fee_ByTier_TX_Comp_final__c</fullName>
        <label>Admin Fee  - Comp [final]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Fee_Types__c</fullName>
        <formula>TEXT( AssociatedToQuoteResponse__r.Admin_Fee_Types__c )</formula>
        <label>Admin Fee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration_Fee_ByTier_TX_final__c</fullName>
        <label>Admin Fee - Fam [final]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration_Fee_ByTier_TX_initial__c</fullName>
        <label>Admin Fee - Fam</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration_Fee_ByTier_TX_sold__c</fullName>
        <label>Admin Fee - Fam  [sold]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration_Fee_ByTier_final_Single__c</fullName>
        <label>Admin Fee  - Single [final]</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration_Fee_ByTier_initial_Single__c</fullName>
        <label>Admin Fee  - Single</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration_Fee_ByTier_sold_Single__c</fullName>
        <label>Admin Fee  - Single [sold]</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AggregateStopLoss_byTier_final__c</fullName>
        <label>ASL Fee - Fam [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AggregateStopLoss_byTier_initial__c</fullName>
        <label>ASL Fee - Fam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AggregateStopLoss_byTier_sold__c</fullName>
        <label>ASL Fee - Fam  [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AggregateStop_Loss_Fee_ByTier_initial_C__c</fullName>
        <label>ASL Fee  - Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AggregateStop_Loss_Fee_by_Tier_sold_C__c</fullName>
        <label>ASL Fee  - Comp [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_Fee_By_Tier_final_C__c</fullName>
        <label>ASL Fee  - Comp [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_Level__c</fullName>
        <label>ASL Attachment Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocated_Taxes_and_Fee_PCPM_final__c</fullName>
        <label>Allocated Taxes and Fee PCPM [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Taxes_and_Fee_PCPM_initial__c</fullName>
        <label>Allocated Taxes and Fee PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Taxes_and_Fee_PCPM_sold__c</fullName>
        <label>Allocated Taxes and Fee PCPM [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Aggregate_Cap_final__c</fullName>
        <label>Annual Aggregate Cap [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Aggregate_Cap_initial__c</fullName>
        <label>Annual Aggregate Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Aggregate_Cap_sold__c</fullName>
        <label>Annual Aggregate Cap [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssociatedToQuoteResponse__c</fullName>
        <label>Quote Response</label>
        <referenceTo>Quote_Response__c</referenceTo>
        <relationshipLabel>Quote Associations</relationshipLabel>
        <relationshipName>Quote_Response_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AssociationToQuoteRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Request</label>
        <referenceTo>Quote_Request_Summary__c</referenceTo>
        <relationshipLabel>Quote Associations</relationshipLabel>
        <relationshipName>Quote_Response_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Association_Product__c</fullName>
        <label>Association Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BA HMO</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>Drug-Only</fullName>
                </value>
                <value>
                    <fullName>HIB</fullName>
                </value>
                <value>
                    <fullName>HMOI</fullName>
                </value>
                <value>
                    <fullName>Nested BA HMO</fullName>
                </value>
                <value>
                    <fullName>Nested HMOI</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>POS+M25:M53</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>Trad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ave_Claim_Value_ByTier_initial_Single__c</fullName>
        <label>Avg Claim Value  - Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Claim_Value_ByTier_Initial_C__c</fullName>
        <label>Avg Claim Value  - Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Claim_Value_ByTier_final_C__c</fullName>
        <label>Avg Claim Value  - Comp [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Claim_Value_ByTier_final_Single__c</fullName>
        <label>Avg Claim Value  - Single [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Claim_Value_ByTier_sold_C__c</fullName>
        <label>Avg Claim Value  - Comp [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Claim_Value_ByTier_sold_Singl__c</fullName>
        <label>Avg Claim Value  - Single [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Claim_Value_by_Tier_final__c</fullName>
        <label>Avg Claim Value - Fam [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Claim_Value_by_Tier_initial__c</fullName>
        <label>Avg Claim Value - Fam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Claim_Value_by_Tier_sold__c</fullName>
        <label>Avg Claim Value - Fam  [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blue_Care_Connection_final__c</fullName>
        <label>Blue Care Connection [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blue_Care_Connection_initial__c</fullName>
        <label>Blue Care Connection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blue_Care_Connection_sold__c</fullName>
        <label>Blue Care Connection [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Level_Cap_Initial__c</fullName>
        <label>Claim Level Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Level_Cap_final__c</fullName>
        <label>Claim Level Cap [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_level_Cap_sold__c</fullName>
        <label>Claim Level Cap [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_final__c</fullName>
        <label>Commission (Separate Line Item) [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_initial__c</fullName>
        <label>Commission (Separate Line Item)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_sold__c</fullName>
        <label>Commission (Separate Line Item) [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Count_Final__c</fullName>
        <label>Contract Count [final]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Count_Initial__c</fullName>
        <label>Contract Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Count_sold__c</fullName>
        <label>Contract Count [sold]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantee_Discount_Percent_final__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Guarantee Discount Percent [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guarantee_Discount_Percent_initial__c</fullName>
        <label>Guarantee Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guarantee_Discount_Percent_sold__c</fullName>
        <label>Guarantee Discount Percent [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HCSC_Access_Fee_Percent_Initial__c</fullName>
        <label>HCSC Access Fee Percent (Labor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HCSC_Access_Fee_Percent_final__c</fullName>
        <label>HCSC Access Fee Percent (Labor) [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HCSC_Access_Fee_Percent_sold__c</fullName>
        <label>HCSC Access Fee Percent (Labor) [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HMOManagedCareFee_final__c</fullName>
        <label>HMO Managed Care Fee [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HMOManagedCareFee_initial__c</fullName>
        <label>HMO Managed Care Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HMOManagedCareFee_sold__c</fullName>
        <label>HMO Managed Care Fee [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISL_Fee_ByTier_final_Single__c</fullName>
        <label>ISL Fee  - Single [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISL_Fee_ByTier_initial_Single__c</fullName>
        <label>ISL Fee  - Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISL_Fee_ByTier_sold_Single__c</fullName>
        <label>ISL Fee  - Single [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Illinois_Access_Fee_final__c</fullName>
        <label>Illinois Access Fee [final]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Illinois_Access_Fee_initial__c</fullName>
        <label>Illinois Access Fee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Illinois_Access_Fee_sold__c</fullName>
        <label>Illinois Access Fee [sold]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndividualStopLoss_by_tier_final__c</fullName>
        <label>ISL Fee - Fam [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndividualStopLoss_by_tier_initial__c</fullName>
        <label>ISL Fee - Fam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_StopLoss_Fee_ByTier_final_C__c</fullName>
        <label>ISL Fee  - Comp [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_StopLoss_Fee_ByTier_initial_C__c</fullName>
        <description>Individual</description>
        <label>ISL Fee  - Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_StopLoss_Fee_By_Tier_sold_C__c</fullName>
        <label>ISL Fee  - Comp [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_StopLoss_fee_byTier_sold__c</fullName>
        <label>ISL Fee - Fam  [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Stop_Loss_Level__c</fullName>
        <label>ISL Attachment Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonStandard_Srvc_OneTime_Charge_final__c</fullName>
        <label>Non Std SVC One Time Charge [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonStandard_Srvc_OneTime_Charge_initial__c</fullName>
        <label>Non Std SVC One Time Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonStandard_Srvc_OneTime_Charge_sold__c</fullName>
        <description>Non Standard Service One Time Charge (sold)</description>
        <label>Non Std SVC One Time Charge [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_HCSC_Access_Fee_Percent_Final__c</fullName>
        <label>NonHCSC Access Fee Percent(Labor)[final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_HCSC_Access_Fee_Percent_Initial__c</fullName>
        <label>NonHCSC Access Fee Percent (Labor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_HCSC_Access_Fee_Percent_sold__c</fullName>
        <label>NonHCSC Access Fee Percent(Labor) [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Standard_SVC_Fee_ByTier_final_C__c</fullName>
        <label>Non Std SVC Fee  - Comp [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_SVC_Fee_ByTier_final_Single__c</fullName>
        <label>Non Std SVC Fee  - Single [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_SVC_Fee_ByTier_initial_C__c</fullName>
        <label>Non Std SVC Fee  - Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_SVC_Fee_ByTier_sold_single__c</fullName>
        <label>Non Std SVC Fee  - Single [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_SVC_Fee_sold_C__c</fullName>
        <label>Non Std SVC Fee  - Comp [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Service_Fee_by_Tier_final__c</fullName>
        <label>Non Std SVC Fee - Fam [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Service_Fee_by_Tier_initial__c</fullName>
        <label>Non Std SVC Fee - Fam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Service_Fee_by_Tier_sold__c</fullName>
        <label>Non Std SVC Fee - Fam [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Std_SVC_Fee_ByTier_initial_Single__c</fullName>
        <label>Non Std SVC Fee  - Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PhysicianServiceFees_Family_final__c</fullName>
        <label>Physician Service Fees - Family [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PhysicianServiceFees_Family_initial__c</fullName>
        <label>Physician Service Fees - Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PhysicianServiceFees_Family_sold__c</fullName>
        <label>Physician Service Fees - Family [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PhysicianServiceFees_Single_Sold__c</fullName>
        <label>Physician Service Fees - Single [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PhysicianServiceFees_Single_final__c</fullName>
        <label>Physician Service Fees - Single [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PhysicianServiceFees_Single_initial__c</fullName>
        <label>Physician Service Fees - Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Network__c</fullName>
        <label>Product Network</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Enrollment_Family__c</fullName>
        <description>when Single/Family=YES</description>
        <label>Projected Enrollment - Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Enrollment_Single__c</fullName>
        <label>Projected Enrollment - Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Enrollment__c</fullName>
        <label>Projected Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Paid_Claims__c</fullName>
        <label>Projected Paid Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Rates_Final__c</fullName>
        <label>Projected Rates [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Rates_Initial__c</fullName>
        <label>Projected Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Rates_sold__c</fullName>
        <label>Projected Rates [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Rx_Formulary__c</fullName>
        <label>Proposed Rx Formulary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Performance Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Rx_Network__c</fullName>
        <label>Proposed Rx Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>Preferred/Value</fullName>
                </value>
                <value>
                    <fullName>Traditional Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Rx_Pricing__c</fullName>
        <label>Proposed Rx Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional, Pass Through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Effective_Date__c</fullName>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_End_Date__c</fullName>
        <label>Rate End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Tier__c</fullName>
        <label>Rate Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2Tier</fullName>
                </value>
                <value>
                    <fullName>3 Tier</fullName>
                </value>
                <value>
                    <fullName>4 Tier</fullName>
                </value>
                <value>
                    <fullName>5 Tier</fullName>
                </value>
                <value>
                    <fullName>Composite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RunOff_Claim_Libty_ByTier_initial_Single__c</fullName>
        <label>Run Off Claim Liab.  - Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Admin_ByTier_Single_final__c</fullName>
        <label>Run Off Admin  - Single [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Admin_ByTier_Single_sold__c</fullName>
        <label>Run Off Admin  - Single [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Admin_ByTier_initial_Single__c</fullName>
        <label>Run Off Admin  - Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_AdministrationByTier_initial_C__c</fullName>
        <label>Run Off Admin  - Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_AdministrationByTier_sold__c</fullName>
        <label>Run Off Admin - Fam [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Administration_ByTier_final_C__c</fullName>
        <label>Run Off Admin  - Comp [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Administration_ByTier_sold_C__c</fullName>
        <label>Run Off Admin  - Comp [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Administration_by_Tier_final__c</fullName>
        <label>Run Off Admin - Fam [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Administration_by_Tier_initial__c</fullName>
        <label>Run Off Admin - Fam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Claim_Liability_ByTier_final_C__c</fullName>
        <label>Run Off Claim Liab. - Comp [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Claim_Liability_ByTier_initial_C__c</fullName>
        <label>Run Off Claim Liab.  - Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Claim_Liability_ByTier_sold_C__c</fullName>
        <label>Run Off Claim Liab.  - Comp [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Claim_Liability_by_Tier_final__c</fullName>
        <label>Run Off Claim Liab. - Fam [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Claim_Liability_by_Tier_initial__c</fullName>
        <label>Run Off Claim Liab. - Fam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Claim_Liability_by_Tier_sold__c</fullName>
        <label>Run Off Claim Liab. - Fam [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Claim_Libty_ByTier_Single_final__c</fullName>
        <label>Run Off Claim Liab. - Single [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Off_Claim_Libty_ByTier_Single_sold__c</fullName>
        <label>Run Off Claim Liab. - Single[sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Type__c</fullName>
        <label>Run Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RENEWAL</fullName>
                </value>
                <value>
                    <fullName>PROPOSAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RxAdministrative_Fee_By_Tier_Sold_C__c</fullName>
        <label>Rx Admin Fee  - Comp [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RxRebate_Credit_ByTier_sold_C__c</fullName>
        <description>Drug Rebate Credit  comp</description>
        <label>Rx Rebate Credit  - Comp [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Admin_Fee_ByTier_Single_final__c</fullName>
        <label>Rx Admin Fee  - Single [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Admin_Fee_ByTier_Single_sold__c</fullName>
        <label>Rx Admin Fee  - Single [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Admin_Fee_ByTier_initial_Single__c</fullName>
        <label>Rx Admin Fee   - Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Administrative_Fee_ByTier_final_C__c</fullName>
        <label>Rx Admin Fee  - Comp [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Administrative_Fee_ByTier_final__c</fullName>
        <label>Rx Admin Fee - Fam [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Administrative_Fee_By_Tier_Initial_C__c</fullName>
        <label>Rx Admin Fee  - Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>